# ZincInstaller

./: .gitattributes  CMakeLists.txt  README.md
assets/: index.html  renderer.js
src/: MyApp.cpp  MyApp.h  main.cpp
